# text-files-storage

./: .gitignore  Pipfile  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml
ansible/: .#pyenv.yml  .#setup.yml  inventory  playbook.retry  playbook.yml  pyenv.yml  setup.yml
django/: README.md  manage.py
django/files/: admin.py  documents.py  forms.py  urls.py  validators.py  views.py
django/templates/: base.djhtml  file_create.djhtml  file_create_general.djhtml  file_edit.djhtml  file_list.djhtml
django/textFilesStorage/: urls.py  wsgi.py
django/users/: admin.py  forms.py  tests.py  urls.py  views.py
django/webpack/: index.js  package-lock.json  package.json  webpack.config.js
files/: admin.py  documents.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py  widgets.py
files/migrations/: 0002_file_description.py  0005_remove_file_text.py
media_cdn/Test1/: Test1.txt
media_cdn/Test2/: Test2.txt
media_cdn/Test3/: Test3.docx
media_cdn/Test4/: Test4.odt
media_cdn/Test5/: Test5.doc
static_cdn/: staticfiles.json
templates/: base.djhtml  base.html  file_create.djhtml  file_create.html  file_create_general.djhtml  file_create_general.html  file_delete.djhtml  file_delete.html  file_detail.djhtml  file_detail.html  file_edit.djhtml  file_edit.html  file_list.djhtml  file_list.html  file_upload.djhtml  file_upload.html  file_upload_general.djhtml  home.djhtml  signup.djhtml  signup.html  tag_list.djhtml
templates/registration/: login.html  (+3 more)
textFilesStorage/: db.sqlite3  settings.py  urls.py  wsgi.py
users/: views.py
(+34 files in other folders)
