[tool.poetry]
name = "text-files-storage"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotyuk <fly1ngDream@protonamil.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "*"
django-crispy-forms = "*"
python-slugify = "*"
gunicorn = "*"
whitenoise = "*"
psycopg2-binary = "*"
django-markdown-deux = "*"
pypandoc = "*"
urllib3 = "*"
chardet = "*"
django-select2 = "*"
python-dotenv = "*"
textract = "*"
django-elasticsearch-dsl = "*"
django-jet = "^1.0"
google-api-python-client = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
